chore: complete request changes